manifests/cluster-addons/media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: sabnzbd
          image: ghcr.io/home-operations/sabnzbd:5.1.3@sha256:b1795982db498ed5691a7b1231f0fac7eed2a1d53e9c81b8e834d02695e76104
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /unpack
              name: unpack
            - mountPath: /media
              name: media
            - mountPath: /tmp
              name: tmp
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: unpack
          persistentVolumeClaim:
            claimName: sabnzbd-unpack
        - name: media
          persistentVolumeClaim:
            claimName: shared-media
        - name: tmp
          emptyDir: {}
