manifests/cluster-addons/media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  ports:
    - port: 8080
      targetPort: 8080
