manifests/cluster-addons/media/sabnzbd/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
        - matchLabels:
            app.kubernetes.io/name: lidarr
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toFQDNs:
        - matchName: 'news.eweka.nl'
      toPorts:
        - ports:
            - port: '563'
              protocol: TCP
